--- a/.github/workflows/firefox_only.yml
+++ b/.github/workflows/firefox_only.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Run tests
         run: |
-          poetry run python -m pytest -m --numprocesses $PROCESSES --junit-xml=test-results/results.xml --browser firefox  --testomatio report
+          poetry run python -m pytest --numprocesses $PROCESSES --junit-xml=test-results/results.xml --browser firefox  --testomatio report
         env:
           USERNAME_SAUCEDEMO: ${{ secrets.USERNAME_SAUCEDEMO }}
           PASSWORD_SAUCEDEMO: ${{ secrets.PASSWORD_SAUCEDEMO }}
