--- a/.github/workflows/chromium_only.yml
+++ b/.github/workflows/chromium_only.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Run tests
         run: |
-          poetry run python -m pytest --junit-xml=test-results/results.xml --browser chromium  --testomatio report
+          poetry run python -m pytest --numprocesses auto --junit-xml=test-results/results.xml --browser chromium  --testomatio report
         env:
           USERNAME_SAUCEDEMO: ${{ secrets.USERNAME_SAUCEDEMO }}
           PASSWORD_SAUCEDEMO: ${{ secrets.PASSWORD_SAUCEDEMO }}
